src/sass/plugin.scss
// Import core styles
@import '../../node_modules/@tweakpane/core/lib/sass/plugin';

// Styles for the container
.#{$prefix}-ctnv {
	// Extend a general input view style
	@extend %input;

	cursor: pointer;
	display: flex;
	justify-content: center;
	align-items: center;
	overflow: hidden;
	position: relative;

	&.#{$prefix}-v-disabled {
		opacity: 0.5;
	}

	&_text {
		// You can use CSS variables for styling. See declarations for details:
		// ../../node_modules/@tweakpane/core/lib/sass/common/_defs.scss
		color: var(--in-fg);

		bottom: 2px;
		font-size: 0.9em;
		line-height: 0.9;
		opacity: 0.5;
		position: absolute;
		right: 2px;
		margin: 0.2rem;
		text-align: right;
	}
	&_frac {
		background-color: var(--in-fg);
		border-radius: 1px;
		height: 2px;
		left: 50%;
		margin-top: -1px;
		position: absolute;
		top: 50%;
	}

	// https://css.gg/software-upload
	&_icon {
		box-sizing: border-box;
		position: relative;
		display: block;
		transform: scale(var(--ggs, 1));
		width: 16px;
		height: 6px;
		border: 2px solid;
		border-top: 0;
		border-bottom-left-radius: 2px;
		border-bottom-right-radius: 2px;
		margin-top: 8px;
	}

	&_icon::after {
		content: '';
		display: block;
		box-sizing: border-box;
		position: absolute;
		width: 8px;
		height: 8px;
		border-left: 2px solid;
		border-top: 2px solid;
		transform: rotate(45deg);
		left: 2px;
		bottom: 4px;
	}

	&_icon::before {
		content: '';
		display: block;
		box-sizing: border-box;
		position: absolute;
		border-radius: 3px;
		width: 2px;
		height: 10px;
		background: currentColor;
		left: 5px;
		bottom: 3px;
	}
}

// Styles for the button
.#{$prefix}-btnv_b {
	
	margin-top: 10px;
}

